k8s/webapp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: eshop
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: webapp:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "512Mi"
            cpu: "300m"
          limits:
            memory: "1Gi"
            cpu: "600m"

---
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: eshop
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: webapp
